--- a/app/src/main/res/layout/activity_business_sales_order.xml
+++ b/app/src/main/res/layout/activity_business_sales_order.xml
@@ -196,31 +196,34 @@
                                 android:text="@string/reference_id"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
+
                             <LinearLayout
                                 android:id="@+id/SalesReferenceCopyLL"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
-                            <TextView
-                                android:id="@+id/SalesReferenceidTV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:gravity="right"
-                                android:text=""
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp" />
 
-                            <ImageView
-                                android:id="@+id/SalesReferenceCopyIV"
-                                android:layout_width="@dimen/_11sdp"
-                                android:layout_height="@dimen/_11sdp"
-                                android:layout_gravity="center"
-                                android:layout_marginLeft="@dimen/_6sdp"
-                                android:src="@drawable/ic_copy" />
+                                <TextView
+                                    android:id="@+id/SalesReferenceidTV"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:gravity="right"
+                                    android:text=""
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <ImageView
+                                    android:id="@+id/SalesReferenceCopyIV"
+                                    android:layout_width="@dimen/_11sdp"
+                                    android:layout_height="@dimen/_11sdp"
+                                    android:layout_gravity="center"
+                                    android:layout_marginLeft="@dimen/_6sdp"
+                                    android:src="@drawable/ic_copy" />
+                            </LinearLayout>
                         </LinearLayout>
-                        </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -397,11 +400,12 @@
                             android:src="@drawable/refund_icon" />
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:id="@+id/RefundTV"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_marginTop="@dimen/_4sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:gravity="center"
                             android:text="@string/refund"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
