--- a/app/src/main/res/layout/additional_information_change.xml
+++ b/app/src/main/res/layout/additional_information_change.xml
@@ -47,7 +47,7 @@
                         android:src="@drawable/ic_active_complete"
                         android:visibility="invisible" />
                     <TextView
-                        android:id="@+id/display_nameTV"
+                        android:id="@+id/type_nameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -61,7 +61,7 @@
                         android:visibility="visible" />
 
                     <TextView
-                        android:id="@+id/comapny_nameTV"
+                        android:id="@+id/field_nameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
