--- a/app/src/main/res/layout/list_item_merchant_settings_beneficial_owners.xml
+++ b/app/src/main/res/layout/list_item_merchant_settings_beneficial_owners.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    >
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -15,30 +13,32 @@
         app:cardCornerRadius="@dimen/_10sdp">
 
         <RelativeLayout
+            android:id="@+id/bowLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="@dimen/_11sdp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_11sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:orientation="horizontal">
 
-            <RelativeLayout
-                android:id="@+id/bowLL"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:id="@+id/ll_beneficial"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_11sdp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/nameTx"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
                         android:text=""
                         android:textColor="@color/primary_black"
@@ -50,37 +50,37 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top"
-                        android:layout_toRightOf="@+id/nameTx"
-                        android:contentDescription="@string/primary"
                         android:layout_marginTop="@dimen/_2sdp"
+                        android:layout_marginRight="15dp"
+                        android:contentDescription="@string/primary"
                         android:src="@drawable/ic_icon_awesome_star"
                         android:visibility="gone" />
+                </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/ownershipTx"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/nameTx"
-                        android:layout_marginTop="@dimen/_6sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text=""
-                        android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/_10ssp" />
+                <TextView
+                    android:id="@+id/ownershipTx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/nameTx"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text=""
+                    android:textColor="@color/xdark_gray"
+                    android:textSize="@dimen/_10ssp" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerInParent="true"
-                        android:contentDescription="@string/arrow_right"
-                        android:gravity="right"
-                        android:src="@drawable/ic_rightarrow" />
-                </RelativeLayout>
+            </LinearLayout>
 
-
-            </RelativeLayout>
-
-
+            <ImageView
+                android:id="@+id/iv_sfsfs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@string/arrow_right"
+                android:gravity="right"
+                android:src="@drawable/ic_rightarrow"
+                android:visibility="visible" />
         </RelativeLayout>
+
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
