--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,6 +94,7 @@
 
     <color name="transparent_black">#43000000</color>
     <color name="txn_failed_trans">#22DD2C00</color>
+    <color name="txn_deActivate_trans">#e8e8e8</color>
     <color name="failed_status">#FFDD2C00</color>
     <color name="accounts_bg_color">#f6f9fe</color>
     <color name="balance">#404040</color>
