--- a/app/src/main/res/layout/activity_monthly_service_fee.xml
+++ b/app/src/main/res/layout/activity_monthly_service_fee.xml
@@ -245,6 +245,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:layout_marginRight="@dimen/_4sdp"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
                                 android:text=""
