--- a/app/src/main/res/layout/activity_transaction_details_failed.xml
+++ b/app/src/main/res/layout/activity_transaction_details_failed.xml
@@ -74,7 +74,7 @@
                         android:layout_marginTop="@dimen/_22sdp"
                         android:layout_marginBottom="@dimen/_6sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Failed Bank Withdraw"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -90,7 +90,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="100.00 "
+                            android:text=""
                             android:textColor="@color/primary_color"
                             android:textSize="@dimen/_24ssp" />
 
@@ -139,7 +139,7 @@
                             android:background="@drawable/fill_grn_color_smallradius"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
-                            android:text="Completed"
+                            android:text=""
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_7ssp" />
 
@@ -172,7 +172,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
-                            android:text="07/27/2020 10:36:14"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -208,7 +208,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="1d3hsM734h…"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -236,7 +236,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="Failed Reason"
+                            android:text=""
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_11ssp" />
 
@@ -316,7 +316,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="end"
-                                android:text="1d3hsM734h…"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -355,7 +355,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
-                            android:text="1d3hsM734h…"
+                            android:text=""
                             android:textColor="@color/primary_green"
                             android:textSize="@dimen/_12ssp" />
                     </LinearLayout>
@@ -386,7 +386,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
-                            android:text="100.00"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -426,7 +426,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
-                            android:text="1.00 "
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -485,7 +485,7 @@
                                 android:layout_marginRight="@dimen/_4sdp"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="100,00,0000"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
