--- a/app/src/main/res/layout/dashboard_reserve_release_list.xml
+++ b/app/src/main/res/layout/dashboard_reserve_release_list.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_bold"
                 android:text=""
+                android:layout_marginEnd="@dimen/_2sdp"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
@@ -52,7 +53,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="@string/currency"
-                android:layout_marginStart="@dimen/_5sdp"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_8ssp" />
         </LinearLayout>
