--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -11,21 +11,40 @@
         android:background="@drawable/bottom_left_right_corner"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/tv_group_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/et_bg_gray"
-        android:clickable="false"
-        android:fontFamily="@font/opensans_bold"
-        android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        android:text="Date"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_12ssp"
-        android:visibility="visible" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_group_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center_vertical"
+            android:layout_marginStart="15dp"
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_10sdp"
+            android:layout_weight="1"
+            android:text="Date"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tv_cyn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_gravity="end|center_vertical"
+            android:fontFamily="@font/opensans_regular"
+            android:text="(CYN)"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_10ssp"
+            android:textStyle="normal" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
