--- a/app/src/main/res/layout/activity_reserve_details.xml
+++ b/app/src/main/res/layout/activity_reserve_details.xml
@@ -214,7 +214,7 @@
                             android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
-                            android:text="07/27/2020 @ 2:20 am"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -240,7 +240,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
-                            android:text="20% / 20days Rolling"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -410,7 +410,7 @@
                             android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
-                            android:text="07/27/2020 @ 2:20 am"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -480,7 +480,7 @@
                             android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
-                            android:text="[DBA Name Here]"
+                            android:text=""
                             android:textColor="@color/primary_green"
                             android:textSize="@dimen/_11ssp" />
 
