--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -1058,7 +1058,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/_14sdp"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="N/A"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp" />
 
@@ -1113,7 +1113,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/_14sdp"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="N/A"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp" />
                                 </LinearLayout>
@@ -1387,7 +1387,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/_14sdp"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="N/A"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp"
                                         android:visibility="visible" />
@@ -1454,7 +1454,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/_14sdp"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="N/A"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp"
                                         android:visibility="visible" />
@@ -1499,19 +1499,19 @@
                                 android:text="@string/v_r_history"
                                 android:textColor="@color/primary_green"
                                 android:textSize="@dimen/_11ssp"
-                                android:visibility="gone" />
+                                android:visibility="visible" />
 
-                            <TextView
-                                android:id="@+id/disable_reserve_list"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="@dimen/_10sdp"
-                                android:layout_marginBottom="@dimen/_21sdp"
-                                android:fontFamily="@font/opensans_bold"
-                                android:text="@string/v_r_history"
-                                android:textColor="@color/dark_gray"
-                                android:textSize="@dimen/_11ssp" />
+<!--                            <TextView-->
+<!--                                android:id="@+id/disable_reserve_list"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_gravity="center"-->
+<!--                                android:layout_marginTop="@dimen/_10sdp"-->
+<!--                                android:layout_marginBottom="@dimen/_21sdp"-->
+<!--                                android:fontFamily="@font/opensans_bold"-->
+<!--                                android:text="@string/v_r_history"-->
+<!--                                android:textColor="@color/dark_gray"-->
+<!--                                android:textSize="@dimen/_11ssp" />-->
 
 
                         </LinearLayout>
