--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -60,6 +60,10 @@
         android:id="@+id/reserve_release_details"
         layout="@layout/activity_reserve_payout"
         android:visibility="gone" />
+    <include
+        android:id="@+id/TTDrefund"
+        layout="@layout/activity_business_refund"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
