CV2QA-3092 DBA Name Changed in Pay to Merchant and Business Added with New Chnages

--- a/app/src/main/res/layout/dialog_pay_merchant_with_amount.xml
+++ b/app/src/main/res/layout/dialog_pay_merchant_with_amount.xml
@@ -53,6 +53,8 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/businessProfileAccountItemChildImage"
                 android:scaleType="fitXY"
+                android:background="@color/primary_green"
+                android:src="@drawable/ic_case"
                 android:visibility="visible" />
 
             <TextView
