--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -80,6 +80,7 @@
                         android:layout_height="match_parent"
                         android:contentDescription="@string/businessProfileAccountItemChildImage"
                         android:scaleType="fitXY"
+                        android:background="@drawable/acct_profile"
                         android:visibility="visible" />
 
                     <TextView
@@ -97,13 +98,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_11sdp"
-                    android:gravity="center"
+                    android:layout_marginStart="@dimen/_11sdp"
+                    android:layout_marginEnd="@dimen/_11sdp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/merchantyNameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:singleLine="true"
+                        android:layout_weight="0.1"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_14ssp" />
@@ -113,6 +118,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
+                        android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
