--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -662,6 +662,7 @@
                     android:editable="false"
                     android:clickable="true"
                     android:focusable="false"
+                    android:paddingEnd="@dimen/_30sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
