--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -100,15 +100,13 @@
                     android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginStart="@dimen/_11sdp"
                     android:layout_marginEnd="@dimen/_11sdp"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/merchantyNameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:singleLine="true"
-                        android:layout_weight="0.1"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_14ssp" />
@@ -118,7 +116,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
-                        android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
